switched naker implementation to a compoment, created hook script, created nakerOptions file for preset background

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,5 +1,5 @@
 .nav-style {
-  background-color: #101018f8;
+  background-color: #101018;
   font-size: 20px;
   font-family: "Nunito Sans", sans-serif;
 }
