--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
-.main-content {
+body {
+  background-color: #101018;
+}
+
+.main-container {
   margin-top: 6rem;
+}
+
+.main-content {
+  color: white;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 40px;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
 }
