--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,23 @@ body {
 }
 
 .main-container {
-  margin-top: 6rem;
+  text-align: center;
+  margin-top: 10rem;
 }
 
-.main-content {
+.title-content {
+  margin-top: 2rem;
   color: white;
   font-family: "Nunito Sans", sans-serif;
+  font-weight: 1000;
   font-size: 40px;
+}
+
+.sub-content {
+  color: white;
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
 }
 
 .background {
