--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,18 @@ body {
 .sub-content {
   color: white;
   font-family: "Nunito Sans", sans-serif;
+  font-weight: 900;
+  font-size: 18px;
+}
+
+.blurb-content {
+  color: white;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 400;
   font-size: 18px;
+  margin: auto;
+  max-width: 600px;
+  text-align: center;
 }
 
 .background {
